# synadia-agents

./: .gitignore  CLAUDE.md  README-DEV.md  README.md
.claude-plugin/: marketplace.json
.claude/commands/: security-audit.md
.github/workflows/: agent-sdk-typescript.yml  agents-deerflow-python.yml  agents-typescript.yml  claude.yml  client-sdk-python-agent-service.yml  client-sdk-python.yml  client-sdk-typescript.yml  examples-typescript.yml  release-python-agent-service.yml  release-python-deerflow.yml  release-python.yml
agent-sdk/: README.md
agent-sdk/python/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
agent-sdk/python/docs/: protocol-mapping.md
agent-sdk/python/examples/: 01-echo.py  02-ollama.py  03-openrouter.py  04-combined.py  05-tools.py  README.md  __init__.py  _connect_cli.py  _reference_agent.py  llm.py
agent-sdk/python/scripts/: demo_echo.py
agent-sdk/python/src/synadia_ai/agent_service/: __init__.py  _bytes.py  _inbox.py  _logging.py  heartbeat.py  service.py
agent-sdk/python/tests/: test_attachments_e2e.py  test_client_observability.py  test_close_e2e.py  test_connect_cli_identity.py  test_discovery.py  test_echo_e2e.py  test_error_completion_e2e.py  test_heartbeat_publisher.py  test_keepalive_e2e.py  test_leading_ack_e2e.py  test_query_e2e.py  test_reference_agent_e2e.py  test_service_max_payload.py  test_validation_e2e.py
agent-sdk/python/tests/harness/: __init__.py  evidence.py  nats_server.py
agent-sdk/typescript/: .gitignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts
agent-sdk/typescript/examples/: 01-echo.ts  02-ollama.ts  03-openrouter.ts  03-tools.ts  04-combined.ts  05-tools.ts  README.md  llm.ts
agent-sdk/typescript/src/: index.ts  service.ts
agents/: README.md
agents/acp/: .env.example  CHANGELOG.md  README.md  package.json
agents/acp/src/: cli.ts  (+12 more)
agents/claude-code/: .mcp.json  README.md  package.json  server.ts
agents/codex/: .env.example  .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.json
agents/deerflow/: README.md  pyproject.toml
agents/deerflow/examples/: config.toml  env.example
agents/deerflow/src/synadia_ai/nats_deerflow_channel/: __init__.py  cli.py  config.py  doctor.py  host.py  runner.py  testing.py
agents/deerflow/tests/: test_cli.py  test_config.py  test_doctor.py  test_host.py  test_runner.py
agents/dspy/: README.md
agents/eve/: CHANGELOG.md  README.md  package.json  tsconfig.json
agents/flue/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
agents/gemini/: README.md  package.json  tsconfig.json
agents/grok/: .env.example  CHANGELOG.md  README.md  package.json  tsconfig.json
agents/hermes/: README.md
agents/open-agent/: CHANGELOG.md  README.md  VENDORED.md  package.json  tsconfig.json
agents/openclaw/: .gitignore  CHANGELOG.md  README.md  index.ts  openclaw.plugin.json  package.json  setup-entry.ts  tsconfig.json  tsup.config.ts
agents/opencode/: .env.example  CHANGELOG.md  PLUGIN_FIRST_IMPLEMENTATION_SPEC.md  README.md  package.json
agents/pi/: CHANGELOG.md  README.md  package.json
client-sdk/: README.md
client-sdk/python/: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  handoff.md  pyproject.toml
client-sdk/python/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
client-sdk/python/.github/ISSUE_TEMPLATE/: bug.md  feature.md
client-sdk/python/.github/workflows/: ci.yml  release.yml
client-sdk/python/docs/: nats-agent-protocol.md  nats-agent-sdk.md  protocol-mapping.md
client-sdk/python/examples/: 01-discover.py  02-prompt-text.py  03-prompt-attachment.py  04-query-reply.py  05-liveness.py  06-chat.py  README.md  __init__.py  _connect_cli.py  _reference_agent.py
client-sdk/python/scripts/: demo_echo.py  smoke_ping.py
client-sdk/python/src/natsagent/: __init__.py  _bytes.py  _logging.py  agent.py  agents.py  client.py  connect.py  context.py  discovery.py  envelope.py  errors.py  heartbeat.py  messages.py  service.py  subjects.py  validation.py
client-sdk/python/src/synadia_ai/agents/: __init__.py  _bytes.py  _inbox.py  _logging.py  _mux.py  agent.py  agents.py  context.py  discovery.py  envelope.py  errors.py  heartbeat.py  messages.py  service.py  subjects.py  validation.py
client-sdk/python/tests/: conftest.py  test_attachments_e2e.py  test_bytes.py  test_chat_commands.py  test_client_observability.py  test_close_e2e.py  test_connect_context.py  test_connect_e2e.py  test_context_e2e.py  test_context_load.py  test_discovery.py  test_echo_e2e.py  test_envelope.py  test_error_completion_e2e.py  test_heartbeat.py  test_interop_e2e.py  test_keepalive_e2e.py  test_messages.py  test_mux_wire_economy.py  test_prompt_cancel_race.py  test_prompt_max_wait.py  test_query_e2e.py  test_reference_agent_e2e.py  test_service_max_payload.py  test_session_e2e.py  test_session_memory_e2e.py  test_subjects.py  test_validation.py  test_validation_e2e.py
client-sdk/python/tests/harness/: nats_server.py
client-sdk/typescript/: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  TODO.md  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  tsup.config.ts  vitest.config.ts
devtools/: .devmodeignore  README.md  devmode.sh
docs/: using-nats-cli.md
docs/html/: 2026-06-05--19-56--opencode-multi-session-nats-ux-mitigations.html  index.html
docs/research/: opencode-multi-session-nats-ux-mitigations.md
examples/: README.md
examples/agent-web-ui/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/claude-code-headless/: CHANGELOG.md  README.md  package.json  tsconfig.json
examples/dspy/: README.md  package.json
examples/dspy-research-agent/: README.md  package.json  tsconfig.json
examples/durable-agents/: .gitignore  README.md  package.json  tsconfig.json
examples/open-agent-vercel/: README.md  package.json  tsconfig.json
examples/pi-headless/: CHANGELOG.md  README.md  package.json
(+407 files in other folders)
