[project]
name = "synadia-ai-nats-deerflow-channel"
version = "0.1.0"
description = "DeerFlow channel wrapper for the Synadia Agent Protocol for NATS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Synadia" }]
keywords = ["nats", "agents", "deerflow", "ai", "streaming"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "nats-py>=2.7",
    "pydantic>=2.5",
    "synadia-ai-agent-service>=0.4.1",
    "synadia-ai-agents>=0.7.1",
]

[project.scripts]
deerflow-nats-channel = "synadia_ai.nats_deerflow_channel.cli:main"

[project.urls]
Homepage = "https://github.com/synadia-ai/synadia-agents/tree/main/agents/deerflow"
Repository = "https://github.com/synadia-ai/synadia-agents"
Issues = "https://github.com/synadia-ai/synadia-agents/issues"

[tool.uv.sources]
synadia-ai-agents = { path = "../../client-sdk/python", editable = true }
synadia-ai-agent-service = { path = "../../agent-sdk/python", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synadia_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
packages = ["synadia_ai.nats_deerflow_channel"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "nats.*"
ignore_missing_imports = true
implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]
