[project]
name = "synadia-ai-agents"
version = "0.7.1"
description = "Python client SDK for the Synadia Agent Protocol for NATS — discover and prompt spec-compliant agents over NATS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Synadia" }]
keywords = ["nats", "agents", "ai", "sdk", "rpc", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]
dependencies = [
    "nats-py>=2.7",
    "pydantic>=2.5",
]

[project.optional-dependencies]
examples = [
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/synadia-ai/synadia-agents/tree/main/client-sdk/python"
Repository = "https://github.com/synadia-ai/synadia-agents"
Documentation = "https://github.com/synadia-ai/synadia-agents/blob/main/client-sdk/python/docs/protocol-mapping.md"
Changelog = "https://github.com/synadia-ai/synadia-agents/blob/main/client-sdk/python/CHANGELOG.md"
Issues = "https://github.com/synadia-ai/synadia-agents/issues"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    # `rich` is an examples-extra runtime dep, but `tests/test_chat_commands.py`
    # imports the chat parser out of `examples/06-chat.py`, which top-level
    # imports rich and `sys.exit(3)`s on ImportError. Including rich in the
    # default dev set means `uv sync` (no extras) gets a clean `pytest` run
    # instead of 16 ERROR rows.
    "rich>=13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synadia_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913", # too many arguments — Agent/Client constructors are config objects
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004"] # magic values in tests are fine
"scripts/**" = ["PLR0915"] # diagnostic one-shots may run long linear setups
"examples/**" = ["PLR0915"] # demo scripts may run long linear setups

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
packages = ["synadia_ai.agents"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "nats.*"
ignore_missing_imports = true
implicit_reexport = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra"
testpaths = ["tests"]
